[package]
name = "disbahn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls"]}
tokio = {version = "1.37", features = ["rt-multi-thread", "signal"]}
lazy-regex = "3.1.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
anyhow = "1.0.86"
log = "0.4.21"
env_logger = "0.11.3"
dotenvy = "0.15.7"
diesel = { version = "2.1.6", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1.0"
getset = "0.1.2"

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["builder", "cache", "chrono", "client", "gateway", "http", "model", "utils", "rustls_backend"]
